fixed viewport tag on all pages bc the spacing was off in tag

--- a/style.css
+++ b/style.css
@@ -211,21 +211,18 @@ input[type=submit] {
     text-align:center;
     padding-left:-250px;
     padding-right:300px;
-            width:100%;
             overflow-wrap:normal;}
-  #logo {width:100%;
-    
-     }
+ 
  #main-container {width: 100%;
                   margin-top:-300px;
                   margin-left:-100px
                   margin-right:-100px;}
+   .work {width:100%;}
   
-  .sidebar {width:100%;
-    position:static;
-   padding:30px;}
+  .sidebar{width:100%;
+    margin-left:-250px;
+   }
 
-  .work {width:100%;}
   .main-section {width:100%;
   }
 footer {width:100%
@@ -261,7 +258,8 @@ nav {width:100%;}
   nav a {width:100%;
     margin-left:-200px;}
     .sidebar {width:100%;
-    position: static;
+    position: static:
+
    }
   }
 
